--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
